# finis

./: .dockerignore  .gitignore  AGENTS.md  Caddyfile  Dockerfile  SPECS.md  compose.prod.yaml  compose.yaml  conftest.py  fincli  go.mod  go.sum  justfile  main.py  manage.py  pyproject.toml
.agents/: security.md
.github/workflows/: ci.yml  deploy.yml  migrations.yml
accounts/: backends.py  middleware.py  models.py  session_backend.py  tests.py  urls.py  utils.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0002_rls.py
catalog/: models.py
catalog/migrations/: 0001_initial.py  0002_rls.py
cmd/web/: handlers.go  handlers_test.go  main.go  main_test.go
fincli/: main.py
fincli/commands/: organizations.py  tiers.py  users.py
finis/: apps.py  asgi.py  celery.py  jinja2.py  settings.py  test_settings.py  urls.py  wsgi.py
finis/settings/: default.py  strict.py
internal/htmltest/: htmltest.go
packer/: finis.pkr.hcl
packer/scripts/: setup.sh
scanning/: apps.py  forms.py  models.py  services.py  tasks.py  test_pipeline.py  test_rls.py  test_upload_limits.py  tests.py  urls.py  views.py
scanning/migrations/: 0001_initial.py  0002_pointofsale_seller_processedreceipt_paymentmethod_and_more.py  0002_rls.py  0003_receipterror_code.py
scripts/: build-image.sh  check-migrations-remote.sh  deploy-remote.sh  migrate-remote.sh  prepare-remote.sh  setup-certs.sh  setup-ssh.sh
templates/: base.html  base.html.tmpl  register.html.tmpl  signup.html.tmpl
templates/accounts/: login.html
templates/scanning/: detail.html  list.html  upload.html
templates/scanning/partials/: receipt_row.html  receipt_row_mobile.html  status_badge.html
terraform/: main.tf  variables.tf
