[project]
name = "finis-py"
version = "0.1.0"
description = "Finis - personal finance management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django",
    "jinja2",
    "djangorestframework",
    "djangorestframework-dataclasses",
    "psycopg[c]",
    "django-htmx",
    "environs[django]",
    "structlog",
    "pillow",
]

[dependency-groups]
dev = [
    "mypy",
    "django-stubs",
    "djangorestframework-stubs",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "finis.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RET", "SIM", "TID", "ANN", "COM", "Q"]
ignore = ["COM812"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.django-stubs]
django_settings_module = "finis.settings"
