[project]
name = "finis-py"
version = "0.1.0"
description = "Finis - personal finance management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django",
    "jinja2",
    "djangorestframework",
    "djangorestframework-dataclasses",
    "psycopg[c]",
    "django-htmx",
    "environs[django]",
    "structlog",
    "pillow",
    "click>=8.3.1",
    "rich>=14.3.3",
    "redis>=7.4.0",
    "celery>=5.6.3",
    "granian",
    "django-stubs-ext",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "django-stubs",
    "djangorestframework-stubs",
    "pytest",
    "pytest-django",
    "celery-types>=0.26.0",
    "pytest-env>=1.6.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "finis.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
env = [
    "SCANNING_LLM_PROVIDER=gemini",
    "GEMINI_API_KEY=dummy-gemini-key",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RET", "SIM", "TID", "ANN", "COM", "Q"]
ignore = ["COM812"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.django-stubs]
django_settings_module = "finis.settings"
